# dlmarines

./: .gitignore  404.html  CHANGELOG.md  README.md  conda.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci-testing.yml
callbacks/: index.html
conf/base/: catalog.yml  logging.yml
conf/base/parameters/: data_downloading.yml  model_evaluation.yml  model_training.yml
data_downloading/: index.html
data_processing/: index.html
datamodule/: index.html
docs/: callbacks.md  data_downloading.md  data_processing.md  datamodule.md  index.md  instalation.md  model.md  model_evaluation.md  model_training.md
instalation/: index.html
lightning_logs/version_10/: metrics.csv
model/: index.html
model_evaluation/: index.html
model_training/: index.html
search/: search_index.json
source/: conf.py  index.rst
src/: requirements.txt  setup.py
src/dlmarines/: __init__.py  __main__.py  settings.py
src/dlmarines/pipelines/data_downloading/: README.md  __init__.py  nodes.py  pipeline.py
src/dlmarines/pipelines/data_processing/: README.md  nodes.py  pipeline.py
src/dlmarines/pipelines/model_evaluation/: README.md  __init__.py  nodes.py  pipeline.py
src/dlmarines/pipelines/model_training/: README.md  __init__.py  callbacks.py  datamodule.py  model.py  nodes.py  pipeline.py
src/tests/: test_run.py
src/tests/pipelines/data_downloading/: test_pipeline.py
src/tests/pipelines/data_processing/: test_pipeline.py
src/tests/pipelines/model_evaluation copy/: test_pipeline.py
src/tests/pipelines/model_training/: test_pipeline.py
