[tool.kedro]
package_name = "dlmarines"
project_name = "DLMarines"
project_version = "0.18.5"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/dlmarines -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "dlmarines"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^1.13.1"
numpy = "^1.24.2"
kedro = "^0.18.5"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
kaggle = "^1.5.13"
kedro-datasets = {extras = ["pillow"], version = "^1.0.2"}
torchvision = "^0.14.1"
tqdm = "^4.65.0"
kedro-viz = "^5.3.0"
icecream = "^2.1.3"


[tool.poetry.group.dev.dependencies]
kedro-viz = "^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"